# core

./: README.md  justfile  meson.build
.github/workflows/: release-defi.yml
dockerfiles/: build_linux  build_windows  run_tests
src/node/: meson.build
src/node/api/: callbacks.hpp  enable_api.hpp  hook_endpoints.hxx  interface.cpp  interface.hpp
src/node/api/events/: emit.cpp  subscription.cpp  subscription.hpp
src/node/api/glaze/: schema_aggregator.cpp  schema_aggregator.hpp
src/node/api/http/: glaze_convert.cpp  glaze_convert.hpp  glaze_types.hpp  json.cpp  json.hpp  parse.cpp
src/node/api/stratum/: stratum_server.cpp  stratum_server.hpp
src/node/api/types/: all.hpp  all_fwd.hpp  forward_declarations.hpp
src/node/block/body/: messages.hpp  transaction_map.hpp  transaction_map_fwd.hpp  transaction_types.hpp
src/node/block/chain/: header_chain.cpp  header_chain.hpp  offender.hpp
src/node/block/chain/history/: history.cpp  history.hpp
src/node/chainserver/: server.cpp  server.hpp  subscription_state.cpp
src/node/chainserver/db/: chain_db.cpp  chain_db.hpp  types.hpp
src/node/chainserver/markethistory/: trades_db.cpp  trades_db.hpp
src/node/chainserver/state/: state.cpp  state.hpp
src/node/chainserver/state/block_apply/: types.hpp
src/node/chainserver/state/helpers/: consensus.cpp  consensus.hpp
src/node/chainserver/state/transactions/: block_applier.cpp  block_effects.hpp
src/node/communication/: messages.cpp
src/node/config/: config.cpp  config.hpp
src/node/db/: sqlite.hpp  sqlite_fwd.hpp  type_conv.hpp
src/node/eventloop/: eventloop.cpp  eventloop.hpp
src/node/eventloop/address_manager/: address_manager.cpp  address_manager.hpp  init_arg.hpp  tcp_connections.cpp  tcp_connections.hpp  wakeup_time.hpp
src/node/eventloop/sync/block_download/: block_download.cpp  block_download.hpp
src/node/eventloop/sync/header_download/: header_download.cpp  header_download.hpp
src/node/general/: lexicographic_binary_range.cpp  tcp_util.cpp
src/node/global/: globals.cpp  globals.hpp
src/node/health/: health.cpp  health.hpp  health_fwd.hpp
src/node/mempool/: mempool.cpp  mempool.hpp
src/node/net/: forward.hpp
src/node/peerserver/: peerserver.hpp
src/node/transport/dns/: request.hpp
src/node/transport/helpers/: hostname_port.cpp  sockaddr.hpp  tcp_sockaddr.cpp  tcp_sockaddr.hpp
src/node/transport/tcp/: conman.cpp  conman.hpp
src/shared/: meson.build
src/shared/src/api/http/: json_converter.cpp
src/shared/src/api/types/: input.hpp  shared.cpp  shared.hpp  shared_fwd.hpp
src/shared/src/block/: version.cpp  version.hpp
src/shared/src/block/body/: body.cpp  body.hpp  elements.hpp  elements_fwd.hpp  labels.hpp
src/shared/src/block/chain/: height.hpp
src/shared/src/block/header/: generator.cpp  header.cpp  header.hpp
src/shared/src/communication/: create_transaction.cpp  create_transaction.hpp
src/shared/src/crypto/: address.cpp  crypto.cpp  hash.cpp
src/shared/src/defi/: types.hpp
src/shared/src/defi/uint64/: price.cpp  price.hpp  prod.hpp
src/shared/src/general/: base_elements.hpp  errors.hpp  format_plural.hpp  funds.hpp  hex.cpp  hex.hpp  hex_digit.hpp  hex_serializer.hxx  reader.hpp  result.hpp  serializer.hxx  serializer_fwd.hxx  static_string.hpp  structured_reader.hpp  with_uint64.cpp  with_uint64.hpp  writer.hpp
src/shared/src/tools/: try_parse.hpp
src/shared/src/transport/helpers/: ipv4.hpp
src/shared/src/wrt/: str_utils.hpp  type_collection.hpp  variant.hpp
src/tui_wallet/: meson.build
src/tui_wallet/src/: global.cpp  global.hpp  main.cpp  main_tmp.cpp  shutdown.hpp  validators.cpp  validators.hpp
src/tui_wallet/src/api/: api_call.cpp  api_call.hpp  endpoint.cpp  endpoint.hpp
src/tui_wallet/src/data/: interface.hpp  retrieval_context.cpp  retrieval_context.hpp  state_updater.hpp
src/tui_wallet/src/tui/: gui.cpp  gui.hpp  popup.hpp  popups.cpp  popups.hpp  root.hpp  tabs.cpp  tabs.hpp  ui_data.hpp  validated_input.hpp
src/wallet/: main.cpp  meson.build
